# tuya-convert

./: .gitignore  ANALYSIS_ISSUE_1143.md  ANALYSIS_ISSUE_1157.md  ANALYSIS_ISSUE_1163.md  ANALYSIS_ISSUE_1167.md  COLLAB_DOC_REFACTORING_PLAN.md  DOCUMENTATION_AUDIT_STATUS.md  Dockerfile  GITHUB_ISSUE_CONTENT.md  IMPLEMENTATION_ISSUE_1167.md  Makefile  PSK_EXTRACTION_PLAN.md  README.md  REFACTORING_ROADMAP.md  REFACTORING_SUMMARY.md  SUMMARY_ISSUE_1157.md  SUMMARY_ISSUE_1167.md  TESTING.md  WIKI_CONTENT_INVENTORY.md  WIKI_PHASE_0_PREPARATION.md  WIKI_PHASE_1_CRITICAL_ISSUES.md  WIKI_PHASE_2_TEMPLATES.md  WIKI_PHASE_3_INCOMPLETE_PAGES.md  WIKI_PHASE_4_NEW_PAGES.md  WIKI_PHASE_5_APPLY_TEMPLATES.md  WIKI_RESTRUCTURING_PLAN.md  activate_venv.sh  docker-compose.yml  flake.nix  generate_presentation.py  install_prereq.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start_flash.sh  tuya-convert-presentation.pptx
.github/issue-analysis/: README.md  TEMPLATE.md  TRACKING.md
.github/issue-analysis/archived/: ISSUE_DRAFT_REMOVE_SUDO.md
.github/issue-analysis/archived/1145-sp25-user-error/: analysis.md  summary.md
.github/issue-analysis/archived/1146-sc400w-incompatible/: analysis.md  summary.md
.github/issue-analysis/archived/1164-video-doorbell-telnet/: analysis.md
.github/issue-analysis/open/0135-door-motion-sensor-mcu/: analysis.md  summary.md
.github/issue-analysis/open/0416-cross-distro-support/: analysis.md  summary.md
.github/issue-analysis/open/1158-wifi-ir-remote/: analysis.md  summary.md
.github/issue-analysis/open/1162-smartconfig-loop/: analysis.md
.github/issue-analysis/open/1163-nix-flake/: summary.md
.github/issue-analysis/resolved/0416-cross-distro-support/: analysis.md  summary.md
.github/issue-analysis/resolved/1098-endless-flash-loop/: analysis.md  summary.md
.github/issue-analysis/resolved/1159-pep668-duplicate/: analysis.md  summary.md
.github/issue-analysis/resolved/1165-gentoo-install/: analysis.md
.github/project-planning/: reorganization-proposal.md
.github/project-planning/code-refactoring/: analysis.md  roadmap.md
.github/project-planning/documentation/: refactoring-plan.md
.github/project-planning/wiki-restructuring/: plan.md
.github/project-planning/wiki-restructuring/inventory/: code-alignment.md
.github/project-planning/wiki-restructuring/phases/: 02-templates.md  04-new-pages.md  06-new-home.md  07-cross-reference.md  08-validation.md  09-index-cleanup.md
docs/: ADR-001-Configuration-Management.md  API-Reference.md  Additional-Resources.md  Alternative-Chips-And-Flashing.md  Collaboration-document-for-PSK-Identity-02.md  Compatible-devices-(HTTP-firmware).md  Compatible-devices-(HTTPS-firmware).md  Compatible-devices.md  Failed-attempts-and-tracked-requirements.md  Flash-a-multipart-binary.md  Flashing-of-WiFi-Switch-with-a-Raspberry-Pi.md  Helping-with-new-psk-format.md  Home.md  How-to-Contribute.md  Installation.md  PSK-Identity-02-Affected-Devices.md  PSK-Research-Procedures.md  Protocol-Overview.md  Quick-Start-Guide.md  README.md  Related-Projects.md  System-Architecture.md  Troubleshooting.md  Using-Docker.md  Using-Nix.md  Using-Only-a-Stock-Raspberry-Pi-ZeroW-and-USB-Cable.md  Using-a-Raspberry-Pi.md
docs/_templates/: Device-List-Template.md  Guide-Template.md  Hub-Page-Template.md  Reference-Template.md
scripts/: crypto_utils.py  fake-registration-server.py  mq_pub_15.py  old_screen_with_log.sh  psk-frontend.py  tuya-discovery.py
scripts/smartconfig/: __init__.py  broadcast.py  constants.py  crc.py  main.py  multicast.py  smartconfig.py
tests/: __init__.py  test_crc.py  test_crypto.py  test_crypto_utils.py  test_fake_server_errors.py  test_mq_pub_15_errors.py  test_psk_frontend_errors.py  test_smartconfig.py  test_smartconfig_constants.py  test_smartconfig_main.py  test_smartconfig_socket.py  test_tuya_discovery.py
wiki-backup-20251105/: Additional-Resources.md  Compatible-devices-(HTTP-firmware).md  Compatible-devices-(HTTPS-firmware).md  Compatible-devices.md  Failed-attempts-and-tracked-requirements.md  Flash-a-multipart-binary.md  Helping-with-new-psk-format.md  Home.md  PSK-Key-from-Gosund-Wifi-Bulb.md  Troubleshooting.md  Using-Only-a-Stock-Raspberry-Pi-ZeroW-and-USB-Cable.md
